--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~54.0.27",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.11",
     "expo-font": "~14.0.10",
     "expo-gl": "~16.0.9",
